@@ -182,7 +182,8 @@ MainWindow::Initialise()
   if (look == NULL)
     look = new Look();
 
-  look->Initialise(Fonts::map, Fonts::map_bold, Fonts::map_label);
+  look->Initialise(Fonts::dialog, Fonts::dialog_bold, Fonts::dialog_small,
+                   Fonts::map);
 }
 
 void
@@ -216,6 +217,8 @@ MainWindow::InitialiseConfigured()
 
   assert(look != NULL);
   look->InitialiseConfigured(CommonInterface::GetUISettings(),
+                             Fonts::dialog, Fonts::dialog_bold,
+                             Fonts::dialog_small,
                              Fonts::map, Fonts::map_bold, Fonts::map_label,
                              Fonts::cdi, Fonts::monospace,
                              Fonts::infobox, Fonts::infobox_small,
@@ -228,7 +231,7 @@ MainWindow::InitialiseConfigured()
   map_rect = ib_layout.remaining;
 
   ButtonLabel::CreateButtonLabels(*this);
-  ButtonLabel::SetFont(Fonts::map_bold);
+  ButtonLabel::SetFont(Fonts::dialog_bold);
 
   ReinitialiseLayout_vario(ib_layout);
 
