@@ -169,6 +169,7 @@ Profile::Get(FontSettings &settings)
   settings.infobox_small.lfHeight = settings.infobox_small.lfHeight * 4 / 5;
   settings.infobox_small.lfWeight = FW_MEDIUM;
 
+  GetFont(ProfileKeys::DialogFont, &settings.dialog);
   GetFont(ProfileKeys::FontTitleWindowFont, &settings.title);
   GetFont(ProfileKeys::FontCDIWindowFont, &settings.cdi);
   GetFont(ProfileKeys::FontMapLabelFont, &settings.map_label);
