@@ -202,6 +202,7 @@ const char EnableNMEALogger[] = "EnableNMEALogger";
 const char MapFile[] = "MapFile"; // pL
 const char BallastSecsToEmpty[] = "BallastSecsToEmpty";
 const char UseCustomFonts[] = "UseCustomFonts";
+const char DialogFont[] = "DialogFont";
 const char FontInfoWindowFont[] = "InfoWindowFont";
 const char FontTitleWindowFont[] = "TitleWindowFont";
 const char FontMapWindowFont[] = "MapWindowFont";
